fixes footer ul spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -257,7 +257,4 @@ ul.footer-social-icons li {
     padding: 0;
     margin: 0 auto;
   }
-  .footer-li-1 {
-    padding-left: 0;
-  }
 }
